fix avatar img not showing

--- a/styles/review.less
+++ b/styles/review.less
@@ -69,8 +69,7 @@
   }
 
   // empty states
-
-  img {
+  &-emptyImg {
     padding: 10px;
   }
 
